# agent-worktree-guard

./: .gitignore  AGENTS.md  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: pre-agent-snapshot.json
src/agent_worktree_guard/: __init__.py  cli.py
tests/: test_cli.py
